to-do-app/mysql-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  labels:
    app: mysql-master
spec: 
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector: 
    app: mysql-master
---
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: mysql-master
  labels: 
    app: mysql-master
spec:
  serviceName: "mysql-master"
  selector: 
    matchLabels: 
      app: mysql-master
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-master
    spec: 
      terminationGracePeriodSeconds: 60
      containers:
      - name: mysql
        image: gihyodocker/tododb:latest
        imagePullPolicy: Always
        args:
        - "--ignore-db-dir=lost+found"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec: 
      accessModes: ["ReadWriteOnce"]
      storageClassName: ssd
      resources:
        requests:
          storage: 4Gi
