to-do-app/todo-api.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todoapi
  labels: 
    app: todoapi
spec: 
  selector:
    app: todoapi
  ports: 
    - name: http
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi
  labels:
    app: todoapi
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
      - name: nginx
        image: gihyodocker/nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      - name: api
        image: gihyodocker/todoapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
